CONTENT-7582 #3 Fix spacing in top bar

--- a/src/Modules/Content/Dnn.PersonaBar.Pages/Pages.Web/src/components/PageList/PageList.less
+++ b/src/Modules/Content/Dnn.PersonaBar.Pages/Pages.Web/src/components/PageList/PageList.less
@@ -14,11 +14,10 @@
 
     .search-container {
         float: left;    
-        margin: 10px 30px 0px 30px;
+        margin: 0 30px 15px 30px;
         width: ~"calc(100% - 60px)";
-        border-bottom: 1px solid #c8c8c8;    
-        margin-bottom: 15px;    
-        padding-bottom: 5px;
+        border-bottom: 1px solid #c8c8c8;        
+        padding: 15px 0;
     }
 
     .search-filter {
